--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "tempserver",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
+  "description": "Software de Gestão de Férias - JRMatos",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server.js"
@@ -12,7 +12,9 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
+    "express-validator": "^7.0.1",
     "mongoose": "^8.0.3"
   }
 }
