--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,22 +1,22 @@
 {
    "workbench.colorCustomizations": {
-      "activityBar.activeBackground": "#94d46c",
-      "activityBar.background": "#94d46c",
-      "activityBar.foreground": "#15202b",
-      "activityBar.inactiveForeground": "#15202b99",
-      "activityBarBadge.background": "#5281cc",
+      "activityBar.activeBackground": "#2f7c47",
+      "activityBar.background": "#2f7c47",
+      "activityBar.foreground": "#e7e7e7",
+      "activityBar.inactiveForeground": "#e7e7e799",
+      "activityBarBadge.background": "#422c74",
       "activityBarBadge.foreground": "#e7e7e7",
-      "commandCenter.border": "#15202b99",
-      "sash.hoverBorder": "#94d46c",
-      "statusBar.background": "#77c944",
-      "statusBar.foreground": "#15202b",
-      "statusBarItem.hoverBackground": "#5fa931",
-      "statusBarItem.remoteBackground": "#77c944",
-      "statusBarItem.remoteForeground": "#15202b",
-      "titleBar.activeBackground": "#77c944",
-      "titleBar.activeForeground": "#15202b",
-      "titleBar.inactiveBackground": "#77c94499",
-      "titleBar.inactiveForeground": "#15202b99"
+      "commandCenter.border": "#e7e7e799",
+      "sash.hoverBorder": "#2f7c47",
+      "statusBar.background": "#215732",
+      "statusBar.foreground": "#e7e7e7",
+      "statusBarItem.hoverBackground": "#2f7c47",
+      "statusBarItem.remoteBackground": "#215732",
+      "statusBarItem.remoteForeground": "#e7e7e7",
+      "titleBar.activeBackground": "#215732",
+      "titleBar.activeForeground": "#e7e7e7",
+      "titleBar.inactiveBackground": "#21573299",
+      "titleBar.inactiveForeground": "#e7e7e799"
    },
-   "peacock.color": "#77c944"
+   "peacock.color": "#215732"
 }
